--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 </head>
 <body>
     <a href="#" class="scrollup"><i class="icon-up-circle mr-xs-2 mr-md-0"></i></a>
-    <header class="bg-white">
+    <header class="bg-baner">
         <div class="col-xs-12 col-md-8 text-center container">
             <object type="image/svg+xml" data="imgFiles/logoS.svg" class="logo">
                 <h1>Sergiusz Legan Usługi Transportowe</h1>
             </object>
         </div>
-        <nav class="navbar navbar-dark bg-primary navbar-expand-sm">
+        <nav class="navbar navbar-dark bg-navbar navbar-expand-sm">
             <a class="navbar-brand" href="#"><i class="demo-icon icon-truck d-none d-md-inline-block"></i>SERGIUSZ LEGAN</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przełącznik nawigacji">
                 <span class="navbar-toggler-icon"></span>
