--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<title>Sergiusz Legan USŁUGI TRANSPORTOWE</title>
 	
 	<meta name="description" content="Oferuję usługi transportowe w mieście Sobótka i okolicach. 
-                                      Wykonam przewóz materiałów wraz z załadunkiem i rozładunkiem.
+                                      Wykonam przewóz materiałów budowlanych, mebli, węgla, ziemii wraz z załadunkiem i rozładunkiem.
+                                      Posiadam wywrotkę firmy MAN 4x4 oraz busa Volkswagen T4.
                                       Zachęcam do kontaktu - Sergiusz Legan." />
 	<meta name="keywords" content="transport, usługa, przewóz, usługi transportowe, Sobótka, Świdnica, Wrocław, ciężarówka, bus, MAN, T4,
                                    materiały budowlane, materiały sypkie" />
@@ -22,7 +23,6 @@
     <script src="jsFiles/jquery.scrollTo.min.js"></script>
     
     <script src="jsFiles/scrollup.js"></script>
-
 
 	<!--[if lt IE 9]>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -38,13 +38,13 @@
             </object>
         </div>
         <nav class="navbar navbar-dark bg-navbar navbar-expand-sm">
-            <a class="navbar-brand" href="#"><i class="demo-icon icon-truck d-none d-md-inline-block"></i>SERGIUSZ LEGAN</a>
+            <a class="navbar-brand" href="index.html"><i class="demo-icon icon-truck d-none d-md-inline-block"></i>SERGIUSZ LEGAN</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przełącznik nawigacji">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="mainmenu">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="#">Informacje</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Informacje</a></li>
                     <li class="nav-item"><a class="nav-link" href="uslugi.html">Usługi</a></li>
                     <li class="nav-item"><a class="nav-link" href="zasieg.html">Zasięg</a></li>
                     <li class="nav-item"><a class="nav-link" href="cennik.html">Cennik</a></li>
